--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 sfg.brewery.apihost=http://localhost:8080
 
+logging.level.org.apache.http=debug
+
+sfg.maxtotalconnections=100
+sfg.defaultmaxtotalconnections=20
+sfg.connetionrequesttimeout=3000
+sfg.scokettimeout=3000
